# ai-garage-workshop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  system_prompt.j2  test.py  tools.py  utils.py
endpoints/: README.md
endpoints/message-broker/: dockerfile  main.py
endpoints/message-broker/app/: main.py
endpoints/message-broker/static/: index.html
