[project]
name = "ai-garage-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.4.3",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
